fix(extension): align button with gtx

--- a/packages/extension-content-ui/src/components/vocably-button/vocably-button.scss
+++ b/packages/extension-content-ui/src/components/vocably-button/vocably-button.scss
@@ -10,8 +10,8 @@
   @extend %icon;
 
   border-radius: 5px;
-  width: 18px;
-  height: 18px;
+  width: 19px;
+  height: 19px;
   background-color: #fff;
   background-position: center center;
   background-repeat: no-repeat;
